Project

General

Profile

Actions

Bug #20747

closed

leaked context from handle_recovery_delete

Added by Sage Weil almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

  <kind>Leak_DefinitelyLost</kind>
  <xwhat>
    <text>1,944 (16 direct, 1,928 indirect) bytes in 1 blocks are definitely lost in loss record 45 of 50</text>
    <leakedbytes>1944</leakedbytes>
    <leakedblocks>1</leakedblocks>
  </xwhat>
  <stack>
    <frame>
      <ip>0xA34D203</ip>
      <obj>/usr/lib64/valgrind/vgpreload_memcheck-amd64-linux.so</obj>
      <fn>operator new(unsigned long)</fn>
      <dir>/builddir/build/BUILD/valgrind-3.11.0/coregrind/m_replacemalloc</dir>
      <file>vg_replace_malloc.c</file>
      <line>334</line>
    </frame>
    <frame>
      <ip>0x8262BC</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>new_sub</fn>
      <dir>/usr/src/debug/ceph-12.1.1-419-g6dd24af/src/include</dir>
      <file>Context.h</file>
      <line>364</line>
    </frame>
    <frame>
      <ip>0x8262BC</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>new_sub</fn>
      <dir>/usr/src/debug/ceph-12.1.1-419-g6dd24af/src/include</dir>
      <file>Context.h</file>
      <line>442</line>
    </frame>
    <frame>
      <ip>0x8262BC</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>PGBackend::handle_recovery_delete(boost::intrusive_ptr&lt;OpRequest&gt;)</fn>
      <dir>/usr/src/debug/ceph-12.1.1-419-g6dd24af/src/osd</dir>
      <file>PGBackend.cc</file>
      <line>127</line>
    </frame>
    <frame>
      <ip>0x8271F3</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>PGBackend::handle_message(boost::intrusive_ptr&lt;OpRequest&gt;)</fn>
      <dir>/usr/src/debug/ceph-12.1.1-419-g6dd24af/src/osd</dir>
      <file>PGBackend.cc</file>
      <line>103</line>
    </frame>
    <frame>
      <ip>0x792BAD</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>PrimaryLogPG::do_request(boost::intrusive_ptr&lt;OpRequest&gt;&amp;, ThreadPool::TPHandle&amp;)</fn>
      <dir>/usr/src/debug/ceph-12.1.1-419-g6dd24af/src/osd</dir>
      <file>PrimaryLogPG.cc</file>
      <line>1717</line>
    </frame>
    <frame>
      <ip>0x62DF48</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>OSD::dequeue_op(boost::intrusive_ptr&lt;PG&gt;, boost::intrusive_ptr&lt;OpRequest&gt;, ThreadPool::TPHandle&amp;)</fn>
      <dir>/usr/src/debug/ceph-12.1.1-419-g6dd24af/src/osd</dir>
      <file>OSD.cc</file>
      <line>9454</line>
    </frame>

/a/sage-2017-07-22_06:10:59-rados-wip-sage-testing-distro-basic-smithi/1432082

looks like the gather sub in void PGBackend::handle_recovery_delete(OpRequestRef op)

Actions #1

Updated by Josh Durgin over 6 years ago

  • Status changed from 12 to Fix Under Review
Actions #2

Updated by Sage Weil over 6 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF