src/osd/PGBackend.cc
@@ -130,8 +130,10 @@ void PGBackend::handle_recovery_delete(OpRequestRef op)
   ConnectionRef conn = m->get_connection();
 
   gather.set_finisher(new FunctionContext(
-    [=](int) {
-      get_parent()->send_message_osd_cluster(reply, conn.get());
+    [=](int r) {
+      if (r != -EAGAIN) {
+	get_parent()->send_message_osd_cluster(reply, conn.get());
+      }
     }));
   gather.activate();
 }
